crates/fittle-cli/tests/snapshots/corpus__info__edge__compressed-rice.fits.fz.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "derived": {
    "plate_solved": false
  },
  "fields": {
    "exposure_s": {
      "source": {
        "key": "EXPTIME",
        "kind": "keyword"
      },
      "value": 60.0
    },
    "object": {
      "source": {
        "key": "OBJECT",
        "kind": "keyword"
      },
      "value": "NGC 7000"
    }
  },
  "file_name": {},
  "health": [],
  "image": {
    "bitpix": 16,
    "compressed": true,
    "hdu": 1,
    "height": 48,
    "planes": 1,
    "width": 64
  },
  "notes": [],
  "origin": {
    "software": []
  },
  "path": "edge/compressed-rice.fits.fz",
  "schema": "fittle.info/1",
  "target": {
    "aliases": [
      "NGC 7000",
      "C 20",
      "LBN 373",
      "North America Nebula"
    ],
    "common_name": "North America Nebula",
    "constellation": "Cygnus",
    "dec": 44.5288,
    "id": "NGC 7000",
    "kind": "Emission nebula (HII region)",
    "ra": 314.8214,
    "size_arcmin": 120.0
  },
  "verdict": {
    "confidence": 73,
    "evidence": [
      {
        "supports": "single",
        "text": "no STACKCNT / NCOMBINE",
        "weight": 25
      },
      {
        "supports": "light",
        "text": "has a target (OBJECT / RA / DEC)",
        "weight": 20
      },
      {
        "supports": "single",
        "text": "BITPIX=16",
        "weight": 20
      }
    ],
    "frame": "light",
    "integrated": false,
    "label": "Light sub",
    "processed": false
  }
}
