crates/fittle-cli/tests/snapshots/corpus__info__edge__long-strings-hierarch.fits.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "derived": {
    "plate_solved": false
  },
  "fields": {
    "object": {
      "source": {
        "key": "OBJECT",
        "kind": "keyword"
      },
      "value": "Sh2-129 Flying Bat and Ou4 Squid"
    }
  },
  "file_name": {},
  "health": [],
  "image": {
    "bitpix": 16,
    "compressed": false,
    "hdu": 0,
    "height": 48,
    "planes": 1,
    "width": 64
  },
  "notes": [],
  "origin": {
    "software": []
  },
  "path": "edge/long-strings-hierarch.fits",
  "schema": "fittle.info/1",
  "verdict": {
    "confidence": 73,
    "evidence": [
      {
        "supports": "single",
        "text": "no STACKCNT / NCOMBINE",
        "weight": 25
      },
      {
        "supports": "light",
        "text": "has a target (OBJECT / RA / DEC)",
        "weight": 20
      },
      {
        "supports": "single",
        "text": "BITPIX=16",
        "weight": 20
      }
    ],
    "frame": "light",
    "integrated": false,
    "label": "Light sub",
    "processed": false
  }
}
